--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=3
+dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -19,11 +19,11 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/GameScenes/area_bunker.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://Scripts/building_functionality.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scripts/GUI/", "res://Scripts/Global/", "res://Scripts/Buildings/", "res://Scenes/", "res://Scenes/GUI/", "res://Scenes/Global/", "res://Scenes/GameScenes/", "res://Assets/", "res://Assets/Sprites/", "res://Assets/Sprites/GUI/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
-dock_5="Inspector,Node,History,Commit (4)"
+dock_5="Inspector,Node,History,Commit (20)"
 
 [EditorNode]
 
@@ -36,8 +36,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/Buildings/Building.gd", "res://Scripts/building_ghost.gd", "res://Scripts/Global/gamemanager.gd", "res://Scripts/GUI/InvenManager.gd", "res://Scripts/GUI/inven_tile.gd", "res://Scripts/player.gd", "res://Scripts/tilemap.gd"]
-selected_script="res://Scripts/tilemap.gd"
+open_scripts=["res://Scripts/Buildings/Building.gd", "res://Scripts/building_ghost.gd", "res://Scripts/Global/gamemanager.gd", "res://Scripts/GUI/InvenManager.gd", "res://Scripts/GUI/inven_tile.gd", "res://Scripts/player.gd", "res://Scripts/building_functionality.gd"]
+selected_script="res://Scripts/building_functionality.gd"
 open_help=["Area2D", "CollisionObject2D", "CollisionShape2D", "Control", "InputEvent", "Node", "StringName"]
 script_split_offset=140
 list_split_offset=393
