--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -1,17 +1,3 @@
-[res://Scripts/tilemap.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 29,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 15,
-"scroll_position": 9.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
 [res://Scripts/Global/gamemanager.gd]
 
 state={
@@ -96,6 +82,20 @@ state={
 "h_scroll_position": 0,
 "row": 27,
 "scroll_position": 9.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/building_functionality.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 16,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 26,
+"scroll_position": 22.6653,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
